--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -834,7 +834,8 @@ footer {
     border-color: transparent !important;
 }
 
-.form-contact .btn-gradient {
+.form-contact .btn-gradient,
+.form-login .btn-gradient {
     padding: 10px 24px;
     font-size: 1.3rem !important;
     font-weight: 500 !important;
@@ -880,3 +881,183 @@ footer {
     margin-bottom: 0.5rem;
 }
 /* End Terms Route */
+
+/* Start Login Form Style */
+.form-login,
+.form-signup {
+    padding: 32px 48px;
+    border-radius: 15px;
+    background-color: rgba(24, 32, 69, 0.05);
+    max-width: 715px;
+}
+
+.form-login h4,
+.form-signup h4 {
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--main-color);
+}
+
+.form-login p,
+.form-signup p {
+    font-size: 1rem;
+    font-weight: 400;
+    color: rgba(24, 32, 69, 0.5);
+}
+
+.form-login input {
+    padding: 12px 16px !important;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.02);
+}
+
+.form-login input:focus,
+.form-login select:focus {
+    box-shadow: unset !important;
+    border: 1px solid var(--secondary-color);
+}
+
+.iti {
+    width: 100% !important;
+}
+
+#phone {
+    padding-right: 110px !important;
+    direction: ltr;
+}
+
+#password {
+    text-align: right !important;
+}
+
+[dir="rtl"] #phone {
+    padding-right: 110px !important;
+    padding-left: 10px !important;
+    text-align: right !important;
+}
+
+.iti__selected-flag {
+    background: rgba(199, 155, 7, 0.15) !important;
+    width: 95px !important;
+    height: 35px !important;
+    padding: 4px 8px !important;
+    display: flex !important;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 6px;
+    margin: 2px;
+    box-sizing: border-box !important;
+    margin-top: 0.5rem;
+}
+
+.iti__flag {
+    transform: scale(1.2);
+    border-radius: 3px;
+}
+
+.iti__arrow {
+    margin-left: 6px;
+}
+
+.iti--allow-dropdown .iti__flag-container,
+.iti--separate-dial-code .iti__flag-container {
+    right: 0 !important;
+    left: auto !important;
+}
+
+.text-warning {
+    color: var(--secondary-color) !important;
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
+.forget {
+    color: #000;
+}
+
+@media (max-width: 576px) {
+    .iti__selected-flag {
+        width: 90px !important;
+        height: 30px !important;
+        padding: 3px 6px !important;
+    }
+    .iti__flag {
+        transform: scale(1);
+    }
+
+    .iti__country-list {
+        left: 30px !important;
+    }
+
+    .form-login {
+        margin: 0 0.8rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .iti__selected-flag {
+        width: 90px !important;
+        height: 28px !important;
+        font-size: 12px;
+    }
+}
+
+/* End Login Form Style */
+
+/* Start Login Signup Style */
+.form-signup {
+    background-color: transparent !important;
+    box-shadow: unset !important;
+}
+
+.choose-btn {
+    padding: 16px 40px;
+    border: 1px solid rgba(24, 32, 69, 0.08);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.08);
+    background-color: #fff;
+    border-radius: 6px;
+    transition: all 0.35s ease-in-out;
+    position: relative;
+    overflow: hidden;
+}
+
+.choose-btn:hover {
+    border: 1px solid var(--secondary-color);
+    background-color: rgba(199, 155, 7, 0.15);
+    box-shadow: 0 8px 20px rgba(199, 155, 7, 0.35);
+    transform: translateY(-4px) scale(1.02);
+}
+
+.choose-btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        120deg,
+        transparent,
+        rgba(199, 155, 7, 0.2),
+        transparent
+    );
+    transition: all 0.5s;
+}
+
+.choose-btn:hover::after {
+    left: 100%;
+}
+
+.choose-btn h5,
+.re-account {
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: var(--main-color);
+}
+
+.choose-btn p {
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: rgba(24, 32, 69, 0.5);
+}
+
+/* End Login Signup Style */
