--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1307,4 +1307,94 @@ footer {
     font-weight: 500;
     color: #fff !important;
 }
+
+.auction-info-filter {
+    border-radius: 15px;
+    border: 1px solid rgba(24, 32, 69, 0.25);
+    overflow: hidden;
+    padding: 0 !important;
+}
+
+.filter-btn {
+    background: #fff;
+    border: none;
+    border-right: 1px solid rgba(24, 32, 69, 0.25);
+    padding: 16px 24px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    transition: 0.3s;
+    color: #000;
+    border-bottom: 1px solid rgba(24, 32, 69, 0.25);
+}
+
+.filter-btn:last-child {
+    border-right: 1px solid rgba(24, 32, 69, 0.25);
+}
+
+.filter-btn.active {
+    background: #f8f9fa;
+}
+
+.filter-btn:hover {
+    background: #f1f1f1;
+}
+
+.auction-card {
+    overflow: hidden;
+}
+.auction-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(20, 20, 20, 0.6);
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    z-index: 5;
+}
+.overlay-text {
+    background: rgba(175, 43, 39, 1);
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 400;
+    padding: 6px 12px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.win-user {
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: var(--main-color);
+}
+
+.btn-back {
+    font-size: 1.1rem;
+    font-weight: 400;
+    color: var(--main-color);
+    border: none !important;
+    outline: none !important;
+}
+
+.btn-back:hover {
+    color: var(--main-color);
+}
+
+.list-group-forms {
+    list-style-type: none;
+}
+
+.list-group-item-forms {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #000;
+    padding: 16px 32px;
+    border-radius: 15px;
+    background-color: rgba(24, 32, 69, 0.05);
+    border: none !important;
+    width: 300px;
+}
+
 /* End Style Profile (phase 5) Route */
