--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1680,3 +1680,110 @@ input[type="datetime-local"]::-webkit-clear-button {
     font-size: 0.8rem;
     font-weight: 400;
 }
+
+/* Start Chat Style */
+
+.chat-box {
+    position: fixed;
+    bottom: 0;
+    right: 20px;
+    width: 345px;
+    height: 380px;
+    background: #fff;
+    border-radius: 15px 15px 0 0;
+    border: 1px solid rgba(24, 32, 69, 0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    z-index: 9999;
+}
+
+.chat-header {
+    background: rgba(24, 32, 69, 0.05);
+    padding: 8px 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+}
+.user-info {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.chat-avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.chat-username {
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #000;
+}
+
+.chat-close {
+    border: none;
+    background: none;
+    font-size: 2rem;
+    cursor: pointer;
+    color: rgba(24, 32, 69, 0.25);
+}
+
+.chat-body {
+    flex: 1;
+    padding: 12px;
+    overflow-y: auto;
+    background: #fff;
+}
+
+.message {
+    width: fit-content;
+    padding: 8px;
+    margin: 6px 0;
+    font-size: 1.3rem;
+    line-height: 1.4;
+    font-weight: 400;
+    color: var(--main-color);
+}
+
+.sent {
+    background: rgba(24, 32, 69, 0.04);
+    align-self: flex-start;
+    border-radius: 12px 12px 0 12px;
+}
+
+.received {
+    background: rgba(24, 32, 69, 0.15);
+    align-self: flex-end;
+    border-radius: 12px 12px 12px 0;
+}
+
+.chat-footer {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+    border-top: 1px solid #ddd;
+    background: rgba(24, 32, 69, 0.05);
+}
+
+.chat-input {
+    flex: 1;
+    border: none;
+    outline: none;
+    /* padding: 8px; */
+    font-size: 1rem;
+    background-color: transparent;
+}
+
+.chat-send {
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding: 4px;
+    /* color: #555; */
+}
+
+/* End Chat Style */
